--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <!-- <section> -->
-    <div class="container my-5 rounded" style="background-color: #d1b298" data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
+    <div class="container my-5" style="background-color: #d1b298; border-radius: 15px" data-aos="zoom-in-down" data-aos-delay="50" data-aos-duration="1000" data-aos-mirror="true" data-aos-once="false">
       <div class="row px-3 py-4">
         <div class="col-md-12">
           <div class="row d-flex mb-3 align-items-end">
